Completed the Master menus design 29.12.2021

--- a/issBlueMetal/Web.config
+++ b/issBlueMetal/Web.config
@@ -68,7 +68,7 @@
 <connectionStrings>
   <!--<add name="issModel" connectionString="data source=103.16.222.101;initial catalog=db_a77066_bluemetal;user id=sa;password= W#6@t%m9!G;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 
-  <add name="ISSModel" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-6PK70O5\SQLEXPRESS;Initial Catalog=db_a77066_bluemetal;Integrated Security=True" />
+  <add name="ISSModel" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-RAFUDDOH\SQLEXPRESS01;Initial Catalog=IssBlueMetal;Integrated Security=True" />
   <!--<add name="ISSModel" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-RAFUDDOH\SQLEXPRESS01;Initial Catalog=issBlue;Integrated Security=True" />-->
 </connectionStrings>
 <system.webServer>
